--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "container": "^0.0.2",
     "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
-    "next": "14.0.4",
+    "next": "^14.2.29",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
