--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "js-cookie": "^3.0.5",
     "next": "^14.2.29",
     "nextjs-progressbar": "^0.0.16",
+    "quill": "^2.0.3",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.4"
   },
   "devDependencies": {
